@@ -228,6 +228,7 @@ If upgrading from an older release, see the file UPGRADING.
 * (bug 1101) Fix memory leak in refreshLinks
 * (bug 1339) Fix order of @imports in Cologne Blue CSS
 * Don't try to create links without namespaces ([[Category:]] link bug)
+* Memcached data compression fixes
 
 === Caveats ===
 
